Task 2: Fix content behind the nav

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,6 +19,7 @@ body {
   color: #244751;
   background-color: #eee;
   font-family: 'Roboto Condensed', sans-serif;
+  z-index: 1;
 }
 
 /*
@@ -30,4 +31,6 @@ body {
   width: 450px;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 140px;
+  position: relative;
 }
