--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,7 @@
   background-color: #00a087;
   color: #e8fdff;
   padding: 0 2em;
+  z-index: 2;
 }
 
 #nav-bar .logo {
